[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "climb-onyx-client"
version = "4.9.0"
description = "CLI and Python library for Onyx"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Thomas Brier", email = "t.o.brier@bham.ac.uk" }]
maintainers = [{ name = "Thomas Brier", email = "t.o.brier@bham.ac.uk" }]
keywords = ["onyx", "bioinformatics", "metadata"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32,<3",
    "click>=8.1.7,<8.2",
    "typer>=0.12.3,<0.13",
    "rich>=13.9.4,<13.10",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "coverage"]
test = ["pytest", "coverage"]

[project.scripts]
onyx = "onyx.cli:main"

[project.urls]
GitHub = "https://github.com/CLIMB-TRE/onyx-client"

[tool.hatch.build]
include = ["onyx/*.py"]
